# onnx-tts-server

./: Cargo.toml  README.md  commit.sh  install-as-systemd-service.sh
src/: config.rs  lib.rs  main.rs  server.rs  speaker.rs  tts.rs  utils.rs
src/tts/: engine.rs  melo_tts.rs  piper_tts.rs
