[package]
name = "onnx-tts-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
clap = { version = "4.5.32", features = ["derive"] }
eyre = "0.6.12"
rodio = "0.20.1"
serde = { version = "1.0.219", features = ["derive"] }
sherpa-rs = { version = "0.6.6", default-features = false, features = [
    "static",
    "tts",
] }
tokio = { version = "1.44.1", features = ["rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
